force-app/main/default/objects/Lead/fields/Epworth_Driving_And_Stopped__c.field-meta.xml
<CustomField>
    <fullName>Epworth_Driving_And_Stopped__c</fullName>
    <label>Epworth Driving And Stopped</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>