force-app/main/default/objects/Lead/fields/Epworth_In_Car__c.field-meta.xml
<CustomField>
    <fullName>Epworth_In_Car__c</fullName>
    <label>Epworth In Car</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>