force-app/main/default/objects/Lead/fields/Epworth_Lying_Down__c.field-meta.xml
<CustomField>
    <fullName>Epworth_Lying_Down__c</fullName>
    <label>Epworth Lying Down</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>