force-app/main/default/objects/Lead/fields/Epworth_Sitting_After_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Epworth_Sitting_After_Lunch__c</fullName>
    <label>Epworth Sitting After Lunch</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>