force-app/main/default/objects/Lead/fields/Epworth_Sitting_And_Talking__c.field-meta.xml
<CustomField>
    <fullName>Epworth_Sitting_And_Talking__c</fullName>
    <label>Epworth Sitting And Talking</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>