force-app/main/default/objects/Lead/fields/Epworth_Sitting_In_Public__c.field-meta.xml
<CustomField>
    <fullName>Epworth_Sitting_In_Public__c</fullName>
    <label>Epworth Sitting In Public</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>