force-app/main/default/objects/Lead/fields/Epworth_Watching_TV__c.field-meta.xml
<CustomField>
    <fullName>Epworth_Watching_TV__c</fullName>
    <label>Epworth Watching TV</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>