force-app/main/default/objects/Lead/fields/Medicare_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Expiration_Date__c</fullName>
    <label>Medicare Expiration Date</label>
    <type>Date</type>
</CustomField>