force-app/main/default/objects/Lead/fields/OSA50_Apnoeas__c.field-meta.xml
<CustomField>
    <fullName>OSA50_Apnoeas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OSA50 Apnoeas</label>
    <type>Checkbox</type>
</CustomField>