force-app/main/default/objects/Lead/fields/OSA50_Obesity__c.field-meta.xml
<CustomField>
    <fullName>OSA50_Obesity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OSA50 Obesity</label>
    <type>Checkbox</type>
</CustomField>