force-app/main/default/objects/Lead/fields/OSA50_Snoring__c.field-meta.xml
<CustomField>
    <fullName>OSA50_Snoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OSA50 Snoring</label>
    <type>Checkbox</type>
</CustomField>