force-app/main/default/objects/Lead/fields/Patient_Gender__c.field-meta.xml
<CustomField>
    <fullName>Patient_Gender__c</fullName>
    <label>Patient Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender</valueSetName>
    </valueSet>
</CustomField>