force-app/main/default/objects/Lead/fields/Patient_Language__c.field-meta.xml
<CustomField>
    <fullName>Patient_Language__c</fullName>
    <label>Patient Language</label>
    <length>32</length>
    <type>Text</type>
</CustomField>