force-app/main/default/objects/Lead/fields/Patient_Medicare_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Patient_Medicare_Exp_Date__c</fullName>
    <label>Patient Medicare Exp Date</label>
    <type>Date</type>
</CustomField>