force-app/main/default/objects/Lead/fields/Patient_Medicare_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Medicare_Number__c</fullName>
    <label>Patient Medicare Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>