force-app/main/default/objects/Lead/fields/Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>Provider_Number__c</fullName>
    <label>Provider Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>