force-app/main/default/objects/Lead/fields/Referral_Service__c.field-meta.xml
<CustomField>
    <fullName>Referral_Service__c</fullName>
    <label>Referral Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service</valueSetName>
    </valueSet>
</CustomField>