force-app/main/default/objects/Lead/fields/Stop_Bang_Feels_Tired__c.field-meta.xml
<CustomField>
    <fullName>Stop_Bang_Feels_Tired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Bang Feels Tired</label>
    <type>Checkbox</type>
</CustomField>