force-app/main/default/objects/Lead/fields/Stop_Bang_High_Blood_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Stop_Bang_High_Blood_Pressure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Bang High Blood Pressure</label>
    <type>Checkbox</type>
</CustomField>