force-app/main/default/objects/Lead/fields/Stop_Bang_Is_Male__c.field-meta.xml
<CustomField>
    <fullName>Stop_Bang_Is_Male__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Bang Is Male</label>
    <type>Checkbox</type>
</CustomField>