force-app/main/default/objects/Lead/fields/Stop_Bang_Is_Over_35__c.field-meta.xml
<CustomField>
    <fullName>Stop_Bang_Is_Over_35__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Bang Is Over 35</label>
    <type>Checkbox</type>
</CustomField>