force-app/main/default/objects/Lead/fields/Stop_Bang_Neck_Over_40cm__c.field-meta.xml
<CustomField>
    <fullName>Stop_Bang_Neck_Over_40cm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Bang Neck Over 40cm</label>
    <type>Checkbox</type>
</CustomField>