force-app/main/default/objects/Lead/fields/Stop_Bang_Observed_Not_Breathing__c.field-meta.xml
<CustomField>
    <fullName>Stop_Bang_Observed_Not_Breathing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Bang Observed Not Breathing</label>
    <type>Checkbox</type>
</CustomField>