force-app/main/default/objects/Lead/fields/Stop_Bang_Snores__c.field-meta.xml
<CustomField>
    <fullName>Stop_Bang_Snores__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Bang Snores</label>
    <type>Checkbox</type>
</CustomField>