force-app/main/default/objects/Lead/recordTypes/Sleep_Referral_Lead.recordType-meta.xml
<RecordType>
    <fullName>Sleep_Referral_Lead</fullName>
    <active>true</active>
    <businessProcess>SleepReferralLeadProcess</businessProcess>
    <label>Sleep Referral Lead</label>
</RecordType>